<resources>
    <string name="app_name">Shoe Store</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_create_account">Create account</string>

    <string name="welcome">"Welcome"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="welcome_message">Welcome to the shoe store! See the use instructions on the next screen!</string>
    <string name="see_instructions">See instructions</string>
    <string name="instructions">Instructions</string>
    <string name="instructions_message">You can use the app to see the available shoes in the store. Use the add button to add new shoes</string>
    <string name="show_shoe_list">Show shoe list</string>
    <string name="logout">Logout</string>
    <string name="add_a_new_shoe">Add a new shoe</string>
    <string name="name">Name</string>
    <string name="company">Company</string>
    <string name="size">Size</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="login">Login</string>
    <string name="welcome_title">Welcome!</string>
    <string name="shoe_list">Shoe List</string>
    <string name="add_shoe">Add shoe</string>
</resources>
