<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".WelcomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:layout_gravity="top"
                android:scaleType="centerCrop"
                android:layout_width="match_parent"
                android:layout_height="@dimen/portrait_image_height"
                android:src="@drawable/welcome_image"></ImageView>
            <TextView
                android:theme="@style/TextAppearance.AppCompat.Headline"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/welcome" />

            <TextView
                android:theme="@style/TextAppearance.AppCompat.Subhead"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/welcome_message" />

            <Button
android:layout_gravity="end"

            android:layout_width="wrap_content"
            android:theme="@style/CustomButton"

            android:layout_height="wrap_content"
                android:text="@string/see_instructions">

            </Button>
        </LinearLayout>

    </ScrollView>

</layout>